--- a/package.json
+++ b/package.json
@@ -28,16 +28,21 @@
 		"@typescript-eslint/parser": "^6.7.0",
 		"@vite-pwa/assets-generator": "^0.0.10",
 		"@vite-pwa/sveltekit": "^0.2.7",
+		"autoprefixer": "^10.4.14",
 		"dotenv": "^16.3.1",
 		"drizzle-kit": "^0.19.13",
 		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.33.1",
+		"flowbite-svelte": "^0.44.15",
+		"postcss": "^8.4.24",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
 		"svelte": "^4.2.0",
 		"svelte-check": "^3.5.1",
 		"sveltekit-superforms": "^1.6.1",
+		"tailwindcss": "^3.3.2",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"unplugin-icons": "^0.17.0",
