--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"better-sqlite3": "^8.6.0",
 		"drizzle-orm": "^0.28.6",
 		"lucia": "^2.5.0",
+		"nanoid": "^5.0.1",
 		"node-schedule": "^2.1.1",
 		"skguard": "^0.0.13",
 		"skroutes": "^0.0.5",
