--- a/package.json
+++ b/package.json
@@ -18,46 +18,47 @@
 		"generate-pwa-assets": "pwa-assets-generator"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.117",
-		"@playwright/test": "^1.38.0",
+		"@iconify/json": "^2.2.120",
+		"@playwright/test": "^1.38.1",
 		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.25.0",
+		"@sveltejs/kit": "^1.25.1",
 		"@types/better-sqlite3": "^7.6.5",
-		"@types/node-schedule": "^2.1.0",
-		"@typescript-eslint/eslint-plugin": "^6.7.2",
-		"@typescript-eslint/parser": "^6.7.2",
+		"@types/node-schedule": "^2.1.1",
+		"@typescript-eslint/eslint-plugin": "^6.7.3",
+		"@typescript-eslint/parser": "^6.7.3",
 		"@vite-pwa/assets-generator": "^0.0.10",
 		"@vite-pwa/sveltekit": "^0.2.7",
-		"autoprefixer": "^10.4.15",
+		"autoprefixer": "^10.4.16",
 		"dotenv": "^16.3.1",
 		"drizzle-kit": "^0.19.13",
-		"eslint": "^8.49.0",
+		"eslint": "^8.50.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.33.1",
-		"flowbite-svelte": "^0.44.15",
+		"eslint-plugin-svelte": "^2.33.2",
+		"flowbite-svelte": "^0.44.17",
 		"postcss": "^8.4.30",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
-		"svelte": "^4.2.0",
-		"svelte-check": "^3.5.1",
-		"sveltekit-superforms": "^1.7.0",
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
+		"sveltekit-superforms": "^1.7.2",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"unplugin-icons": "^0.17.0",
 		"vite": "^4.4.9",
 		"vite-plugin-pwa": "^0.16.5",
-		"vitest": "^0.34.4",
+		"vitest": "^0.34.5",
 		"workbox-window": "^7.0.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@lucia-auth/adapter-sqlite": "^2.0.0",
+		"@melt-ui/svelte": "^0.50.0",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"better-sqlite3": "^8.6.0",
 		"drizzle-orm": "^0.28.6",
-		"lucia": "^2.6.0",
+		"lucia": "^2.7.0",
 		"nanoid": "^5.0.1",
 		"node-schedule": "^2.1.1",
 		"skguard": "^0.0.13",
