--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/kit": "^1.25.1",
 		"@types/better-sqlite3": "^7.6.5",
+		"@types/lodash-es": "^4.17.9",
 		"@types/node-schedule": "^2.1.1",
 		"@typescript-eslint/eslint-plugin": "^6.7.4",
 		"@typescript-eslint/parser": "^6.7.4",
@@ -58,6 +59,7 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"better-sqlite3": "^8.7.0",
 		"drizzle-orm": "^0.28.6",
+		"lodash-es": "^4.17.21",
 		"lucia": "^2.7.1",
 		"nanoid": "^5.0.1",
 		"node-schedule": "^2.1.1",
