--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,8 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"types": [
-      "vite-plugin-pwa/client",
-      "vite-plugin-pwa/svelte"
-    ]
+		"noUnusedLocals": true,
+		"types": ["vite-plugin-pwa/client", "vite-plugin-pwa/svelte"]
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
