Working On Imports

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DATABASE_FILE=./db.db
-BACKUP_DIR=./backup
-IMPORT_DIR=./import
+BACKUP_DIR=./backup/
+IMPORT_DIR=./import/
 BACKUP_SCHEDULE="0 0 * * *"
 ALLOW_SIGNUP=true
