Removed caches and fixed tailwind.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint": "^8.51.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.34.0",
+		"flowbite": "^1.8.1",
 		"flowbite-svelte": "^0.44.18",
 		"papaparse": "^5.4.1",
 		"postcss": "^8.4.31",
