--- a/.github/workflows/dockerBuild.yml
+++ b/.github/workflows/dockerBuild.yml
@@ -13,7 +13,7 @@ on:
   push:
     branches: ['master', 'dev']
   pull_request:
-    branches: ['master', 'dev']
+    branches: ['master']
   release:
     types: [published]
 
