--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"@lucia-auth/adapter-sqlite": "^2.0.0",
 		"@melt-ui/svelte": "^0.52.0",
 		"@sveltejs/adapter-node": "^1.3.1",
+		"@tailwindcss/container-queries": "^0.1.1",
 		"better-sqlite3": "^8.7.0",
 		"drizzle-orm": "^0.28.6",
 		"lodash-es": "^4.17.21",
