--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"better-sqlite3": "^8.7.0",
 		"drizzle-orm": "^0.28.6",
+		"handlebars": "^4.7.8",
 		"lodash-es": "^4.17.21",
 		"lucia": "^2.7.1",
 		"nanoid": "^5.0.1",
