Add PostgreSQL support and configuration

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ IMPORT_DIR=./import/
 BACKUP_SCHEDULE="0 0 * * *"
 ALLOW_SIGNUP=true
 DB_QUERY_LOG=false
+POSTGRES_URL="postgresql://postgres:postgres@localhost:5432/postgres"
