--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"postcss-load-config": "^5.0.2",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"superjson": "^2.2.1",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
 		"sveltekit-superforms": "^1.13.1",
