--- a/package.json
+++ b/package.json
@@ -13,12 +13,9 @@
 		"format": "prettier --plugin-search-dir . --write .",
 		"test:integration": "playwright test",
 		"test:unit": "TEST_ENV=true vitest",
-		"db:generate": "pnpm drizzle-kit generate:sqlite",
-		"db:studio": "pnpm drizzle-kit studio",
-		"db:undo": "pnpm drizzle-kit drop",
-		"postgres:generate": "pnpm drizzle-kit generate:pg --config=\"drizzlePostgres.config.ts\"",
-		"postgres:studio": "pnpm drizzle-kit studio --config=\"drizzlePostgres.config.ts\"",
-		"postgres:undo": "pnpm drizzle-kit drop --config=\"drizzlePostgres.config.ts\"",
+		"db:generate": "pnpm drizzle-kit generate:pg --config=\"drizzlePostgres.config.ts\"",
+		"db:studio": "pnpm drizzle-kit studio --config=\"drizzlePostgres.config.ts\"",
+		"db:undo": "pnpm drizzle-kit drop --config=\"drizzlePostgres.config.ts\"",
 		"generate-pwa-assets": "pwa-assets-generator"
 	},
 	"devDependencies": {
@@ -27,7 +24,6 @@
 		"@sveltejs/adapter-auto": "^3.0.1",
 		"@sveltejs/kit": "^2.0.6",
 		"@sveltejs/vite-plugin-svelte": "^3.0.1",
-		"@types/better-sqlite3": "^7.6.8",
 		"@types/lodash-es": "^4.17.12",
 		"@types/node-schedule": "^2.1.5",
 		"@types/papaparse": "^5.3.14",
@@ -64,11 +60,9 @@
 	"type": "module",
 	"dependencies": {
 		"@lucia-auth/adapter-postgresql": "^2.0.2",
-		"@lucia-auth/adapter-sqlite": "^2.0.1",
 		"@melt-ui/svelte": "^0.66.2",
 		"@sveltejs/adapter-node": "^2.0.2",
 		"@tailwindcss/container-queries": "^0.1.1",
-		"better-sqlite3": "^9.2.2",
 		"drizzle-orm": "^0.29.1",
 		"handlebars": "^4.7.8",
 		"lodash-es": "^4.17.21",
