--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,6 +14,8 @@ jobs:
       contents: read
 
     steps:
+      # Setsup Postgres
+      - uses: ikalnytskyi/action-setup-postgres@v4
       - uses: actions/checkout@v3
       - name: Install Node.js
         uses: actions/setup-node@v3
@@ -41,3 +43,5 @@ jobs:
       - run: pnpm install
       - run: pnpm check
       - run: pnpm test:unit
+        env:
+          DATABASE_URL: postgres://postgres@localhost:5432/postgres
