Fixed backup schedule

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DATABASE_FILE=./db.db
 BACKUP_DIR=./backup/
 IMPORT_DIR=./import/
-BACKUP_SCHEDULE="0 0 * * *"
+BACKUP_SCHEDULE=0 0 * * *
 ALLOW_SIGNUP=true
 DB_QUERY_LOG=false
 POSTGRES_URL="postgresql://postgres:postgres@localhost:5432/postgres"
