--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"handlebars": "^4.7.8",
 		"lodash-es": "^4.17.21",
 		"lucia": "^2.7.6",
+		"mathjs": "^12.3.1",
 		"nanoid": "^5.0.4",
 		"node-schedule": "^2.1.1",
 		"postgres": "^3.4.3",
