--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"autoprefixer": "^10.4.17",
 		"dotenv": "^16.3.2",
 		"drizzle-kit": "^0.20.13",
+		"echarts": "^5.4.3",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -50,6 +51,7 @@
 		"superjson": "^2.2.1",
 		"svelte": "^4.2.9",
 		"svelte-check": "^3.6.3",
+		"svelte-echarts": "^0.1.1",
 		"sveltekit-superforms": "^1.13.4",
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.6.2",
