--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"echarts": "^5.5.0",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-drizzle": "^0.2.3",
 		"eslint-plugin-svelte": "^2.35.1",
 		"flowbite": "^2.3.0",
 		"flowbite-svelte": "^0.44.24",
@@ -64,7 +65,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@lucia-auth/adapter-postgresql": "^2.0.2",
+		"@lucia-auth/adapter-drizzle": "^1.0.3",
 		"@melt-ui/svelte": "^0.76.0",
 		"@sveltejs/adapter-node": "^5.0.1",
 		"@tailwindcss/container-queries": "^0.1.1",
@@ -72,10 +73,11 @@
 		"drizzle-orm": "^0.30.1",
 		"handlebars": "^4.7.8",
 		"lodash-es": "^4.17.21",
-		"lucia": "^2.7.6",
+		"lucia": "^3.1.1",
 		"mathjs": "^12.4.0",
 		"nanoid": "^5.0.6",
 		"node-schedule": "^2.1.1",
+		"oslo": "^1.1.3",
 		"postgres": "^3.4.3",
 		"skguard": "^0.0.15",
 		"skroutes": "^0.0.15",
