--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"@melt-ui/svelte": "^0.76.2",
 		"@sveltejs/adapter-node": "^5.0.1",
 		"@tailwindcss/container-queries": "^0.1.1",
+		"akahu": "^1.15.3",
 		"devalue": "^4.3.2",
 		"drizzle-orm": "^0.30.4",
 		"handlebars": "^4.7.8",
