--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-svelte": "^2.35.1",
     "flowbite": "^2.3.0",
     "flowbite-svelte": "^0.44.24",
+    "mermaid": "^10.9.0",
     "papaparse": "^5.4.1",
     "postcss": "^8.4.38",
     "postcss-load-config": "^5.0.3",
@@ -64,6 +65,7 @@
     "vite": "^5.2.6",
     "vite-plugin-pwa": "^0.19.7",
     "vitepress": "^1.0.2",
+    "vitepress-plugin-mermaid": "^2.0.16",
     "vitest": "^1.4.0",
     "workbox-window": "^7.0.0"
   },
