--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"@flystorage/local-fs": "^0.1.2",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
 		"@melt-ui/svelte": "^0.76.2",
+		"@square/svelte-store": "^1.0.18",
 		"@sveltejs/adapter-node": "^5.0.1",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"akahu": "^1.15.3",
