--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"@sveltejs/adapter-node": "^5.0.1",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"akahu": "^1.15.3",
+		"cronstrue": "^2.50.0",
 		"devalue": "^5.0.0",
 		"drizzle-orm": "^0.30.9",
 		"handlebars": "^4.7.8",
