--- a/package.json
+++ b/package.json
@@ -23,78 +23,78 @@
 		"docs:preview": "vitepress preview docs"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.207",
-		"@playwright/test": "^1.44.0",
-		"@sveltejs/adapter-auto": "^3.2.0",
-		"@sveltejs/kit": "^2.5.7",
-		"@sveltejs/vite-plugin-svelte": "^3.1.0",
+		"@iconify/json": "^2.2.234",
+		"@playwright/test": "^1.46.0",
+		"@sveltejs/adapter-auto": "^3.2.2",
+		"@sveltejs/kit": "^2.5.20",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/lodash-es": "^4.17.12",
 		"@types/node-schedule": "^2.1.7",
 		"@types/papaparse": "^5.3.14",
-		"@typescript-eslint/eslint-plugin": "^7.8.0",
-		"@typescript-eslint/parser": "^7.8.0",
+		"@typescript-eslint/eslint-plugin": "^8.0.1",
+		"@typescript-eslint/parser": "^8.0.1",
 		"@vite-pwa/assets-generator": "^0.2.4",
-		"@vite-pwa/sveltekit": "^0.5.0",
-		"autoprefixer": "^10.4.19",
+		"@vite-pwa/sveltekit": "^0.6.0",
+		"autoprefixer": "^10.4.20",
 		"dotenv": "^16.4.5",
-		"drizzle-kit": "^0.20.18",
-		"echarts": "^5.5.0",
-		"eslint": "^9.2.0",
+		"drizzle-kit": "^0.23.2",
+		"echarts": "^5.5.1",
+		"eslint": "^9.8.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-drizzle": "^0.2.3",
-		"eslint-plugin-svelte": "^2.38.0",
-		"flowbite": "^2.3.0",
-		"flowbite-svelte": "^0.46.1",
-		"mermaid": "^10.9.0",
+		"eslint-plugin-svelte": "^2.43.0",
+		"flowbite": "^2.5.1",
+		"flowbite-svelte": "^0.46.15",
+		"mermaid": "^10.9.1",
 		"papaparse": "^5.4.1",
-		"postcss": "^8.4.38",
-		"postcss-load-config": "^5.1.0",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.3",
-		"prettier-plugin-tailwindcss": "^0.5.14",
-		"sql-formatter": "^15.3.1",
+		"postcss": "^8.4.41",
+		"postcss-load-config": "^6.0.1",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-tailwindcss": "^0.6.5",
+		"sql-formatter": "^15.3.2",
 		"superjson": "^2.2.1",
-		"svelte": "^4.2.16",
-		"svelte-check": "^3.7.1",
-		"svelte-echarts": "^0.1.1",
-		"sveltekit-superforms": "^2.13.1",
-		"tailwindcss": "^3.4.3",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.5",
-		"unplugin-icons": "^0.19.0",
-		"vite": "^5.2.11",
-		"vite-plugin-pwa": "^0.20.0",
-		"vitepress": "^1.1.4",
+		"svelte": "5.0.0-next.210",
+		"svelte-check": "^3.8.5",
+		"svelte-echarts": "1.0.0-rc3",
+		"sveltekit-superforms": "^2.16.1",
+		"tailwindcss": "^3.4.8",
+		"tslib": "^2.6.3",
+		"typescript": "^5.5.4",
+		"unplugin-icons": "^0.19.2",
+		"vite": "^5.4.0",
+		"vite-plugin-pwa": "^0.20.1",
+		"vitepress": "^1.3.2",
 		"vitepress-plugin-mermaid": "^2.0.16",
-		"vitest": "^1.6.0",
+		"vitest": "^2.0.5",
 		"workbox-window": "^7.1.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@aws-sdk/client-s3": "^3.569.0",
-		"@flystorage/aws-s3": "^0.1.1",
-		"@flystorage/file-storage": "^0.1.1",
-		"@flystorage/local-fs": "^0.1.2",
-		"@lucia-auth/adapter-drizzle": "^1.0.7",
-		"@melt-ui/svelte": "^0.79.0",
+		"@aws-sdk/client-s3": "^3.626.0",
+		"@flystorage/aws-s3": "^0.1.4",
+		"@flystorage/file-storage": "^0.1.4",
+		"@flystorage/local-fs": "^0.1.7",
+		"@lucia-auth/adapter-drizzle": "^1.1.0",
+		"@melt-ui/svelte": "^0.83.0",
 		"@square/svelte-store": "^1.0.18",
-		"@sveltejs/adapter-node": "^5.0.1",
+		"@sveltejs/adapter-node": "^5.2.0",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"akahu": "^1.15.3",
 		"cronstrue": "^2.50.0",
 		"devalue": "^5.0.0",
-		"drizzle-orm": "^0.30.10",
+		"drizzle-orm": "^0.32.2",
 		"handlebars": "^4.7.8",
 		"lodash-es": "^4.17.21",
 		"lucia": "^3.2.0",
-		"mathjs": "^12.4.2",
+		"mathjs": "^13.0.3",
 		"nanoid": "^5.0.7",
 		"node-schedule": "^2.1.1",
-		"oslo": "^1.2.0",
+		"oslo": "^1.2.1",
 		"postgres": "^3.4.4",
-		"sharp": "^0.33.3",
-		"skguard": "^0.0.15",
-		"skroutes": "^0.0.15",
-		"zod": "^3.23.7"
+		"sharp": "^0.33.4",
+		"skguard": "^0.1.1",
+		"skroutes": "^0.1.1",
+		"zod": "^3.23.8"
 	}
 }
