Working towards having recommendations.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"format": "prettier --plugin-search-dir . --write .",
 		"test:integration": "playwright test",
 		"test:unit": "TEST_ENV=true vitest",
-		"db:generate": "pnpm drizzle-kit generate:pg --config=\"drizzlePostgres.config.ts\"",
-		"db:custom": "pnpm drizzle-kit generate:pg --custom --config=\"drizzlePostgres.config.ts\"",
+		"db:generate": "pnpm drizzle-kit generate --config=\"drizzlePostgres.config.ts\"",
+		"db:custom": "pnpm drizzle-kit generate --custom --config=\"drizzlePostgres.config.ts\"",
 		"db:studio": "pnpm drizzle-kit studio --config=\"drizzlePostgres.config.ts\"",
 		"db:undo": "pnpm drizzle-kit drop --config=\"drizzlePostgres.config.ts\"",
 		"generate-pwa-assets": "pwa-assets-generator",
