--- a/package.json
+++ b/package.json
@@ -23,78 +23,79 @@
 		"docs:preview": "vitepress preview docs"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.235",
-		"@playwright/test": "^1.46.0",
-		"@sveltejs/adapter-auto": "^3.2.2",
-		"@sveltejs/kit": "^2.5.20",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@iconify/json": "^2.2.322",
+		"@playwright/test": "^1.51.1",
+		"@sveltejs/adapter-auto": "^5.0.0",
+		"@sveltejs/kit": "^2.20.2",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/lodash-es": "^4.17.12",
 		"@types/node-schedule": "^2.1.7",
-		"@types/papaparse": "^5.3.14",
-		"@typescript-eslint/eslint-plugin": "^8.0.1",
-		"@typescript-eslint/parser": "^8.0.1",
-		"@vite-pwa/assets-generator": "^0.2.4",
-		"@vite-pwa/sveltekit": "^0.6.0",
-		"autoprefixer": "^10.4.20",
-		"dotenv": "^16.4.5",
-		"drizzle-kit": "^0.24.0",
-		"echarts": "^5.5.1",
-		"eslint": "^9.8.0",
-		"eslint-config-prettier": "^9.1.0",
+		"@types/papaparse": "^5.3.15",
+		"@typescript-eslint/eslint-plugin": "^8.29.0",
+		"@typescript-eslint/parser": "^8.29.0",
+		"@vite-pwa/assets-generator": "^1.0.0",
+		"@vite-pwa/sveltekit": "^1.0.0",
+		"autoprefixer": "^10.4.21",
+		"dotenv": "^16.4.7",
+		"drizzle-kit": "^0.30.6",
+		"echarts": "^5.6.0",
+		"eslint": "^9.23.0",
+		"eslint-config-prettier": "^10.1.1",
 		"eslint-plugin-drizzle": "^0.2.3",
-		"eslint-plugin-svelte": "^2.43.0",
-		"flowbite": "^2.5.1",
-		"flowbite-svelte": "^0.46.15",
-		"mermaid": "^10.9.1",
-		"papaparse": "^5.4.1",
-		"postcss": "^8.4.41",
+		"eslint-plugin-svelte": "^3.4.1",
+		"flowbite": "^3.1.2",
+		"flowbite-svelte": "^0.48.4",
+		"mermaid": "^11.6.0",
+		"papaparse": "^5.5.2",
+		"postcss": "^8.5.3",
 		"postcss-load-config": "^6.0.1",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.6",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"sql-formatter": "^15.3.2",
-		"superjson": "^2.2.1",
-		"svelte": "5.0.0-next.210",
-		"svelte-check": "^3.8.5",
+		"prettier": "^3.5.3",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"sql-formatter": "^15.5.2",
+		"superjson": "^2.2.2",
+		"svelte": "5.25.3",
+		"svelte-check": "^4.1.5",
 		"svelte-echarts": "1.0.0-rc3",
-		"sveltekit-superforms": "^2.16.1",
-		"tailwindcss": "^3.4.9",
-		"tslib": "^2.6.3",
-		"typescript": "^5.5.4",
-		"unplugin-icons": "^0.19.2",
-		"vite": "^5.4.0",
-		"vite-plugin-pwa": "^0.20.1",
-		"vitepress": "^1.3.2",
-		"vitepress-plugin-mermaid": "^2.0.16",
-		"vitest": "^2.0.5",
-		"workbox-window": "^7.1.0"
+		"sveltekit-superforms": "^2.24.0",
+		"tailwindcss": "^4.0.17",
+		"tslib": "^2.8.1",
+		"typescript": "^5.8.2",
+		"unplugin-icons": "^22.1.0",
+		"vite": "^6.2.4",
+		"vite-plugin-pwa": "^1.0.0",
+		"vitepress": "^1.6.3",
+		"vitepress-plugin-mermaid": "^2.0.17",
+		"vitest": "^3.1.1",
+		"workbox-window": "^7.3.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@aws-sdk/client-s3": "^3.627.0",
-		"@flystorage/aws-s3": "^0.1.4",
-		"@flystorage/file-storage": "^0.1.4",
-		"@flystorage/local-fs": "^0.1.7",
+		"@aws-sdk/client-s3": "^3.777.0",
+		"@flystorage/aws-s3": "^1.0.1",
+		"@flystorage/file-storage": "^1.0.1",
+		"@flystorage/local-fs": "^1.0.1",
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
-		"@melt-ui/svelte": "^0.83.0",
+		"@melt-ui/svelte": "^0.86.6",
 		"@square/svelte-store": "^1.0.18",
-		"@sveltejs/adapter-node": "^5.2.0",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@tailwindcss/container-queries": "^0.1.1",
-		"akahu": "^1.15.3",
-		"cronstrue": "^2.50.0",
-		"devalue": "^5.0.0",
-		"drizzle-orm": "^0.33.0",
+		"@tailwindcss/vite": "^4.1.1",
+		"akahu": "^2.0.0",
+		"cronstrue": "^2.57.0",
+		"devalue": "^5.1.1",
+		"drizzle-orm": "^0.41.0",
 		"handlebars": "^4.7.8",
 		"lodash-es": "^4.17.21",
-		"lucia": "^3.2.0",
-		"mathjs": "^13.0.3",
-		"nanoid": "^5.0.7",
+		"lucia": "^3.2.2",
+		"mathjs": "^14.4.0",
+		"nanoid": "^5.1.5",
 		"node-schedule": "^2.1.1",
 		"oslo": "^1.2.1",
-		"postgres": "^3.4.4",
-		"sharp": "^0.33.4",
+		"postgres": "^3.4.5",
+		"sharp": "^0.33.5",
 		"skguard": "^0.1.1",
 		"skroutes": "^0.1.1",
-		"zod": "^3.23.8"
+		"zod": "^3.24.2"
 	}
 }
