Removed reliance on old oslo package.

--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
 		"@flystorage/local-fs": "^1.0.1",
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
 		"@melt-ui/svelte": "^0.86.6",
+		"@node-rs/argon2": "^2.0.2",
+		"@oslojs/crypto": "^1.0.1",
+		"@oslojs/encoding": "^1.1.0",
 		"@square/svelte-store": "^1.0.18",
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@tailwindcss/container-queries": "^0.1.1",
@@ -91,7 +94,6 @@
 		"mathjs": "^14.4.0",
 		"nanoid": "^5.1.5",
 		"node-schedule": "^2.1.1",
-		"oslo": "^1.2.1",
 		"postgres": "^3.4.5",
 		"sharp": "^0.33.5",
 		"skguard": "^0.1.1",
