--- a/.github/workflows/githubDocs.yaml
+++ b/.github/workflows/githubDocs.yaml
@@ -35,7 +35,7 @@ jobs:
       - uses: pnpm/action-setup@v3
         with:
           version: 8
-      
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -44,11 +44,11 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: pnpm install --shamefully-hoist 
+        run: pnpm install --shamefully-hoist
       - name: Build with VitePress
         run: pnpm docs:build
         env:
-          VITEPRESS_BASE: "/totallatorv3" # Set the base path as an environment variable        
+          VITEPRESS_BASE: '/totallatorv3' # Set the base path as an environment variable
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
