--- a/DockerFile.docs
+++ b/DockerFile.docs
@@ -11,7 +11,7 @@ COPY package.json pnpm-lock.yaml ./
 RUN npm install -g pnpm
 
 # Install dependencies
-RUN pnpm install --shamefully-hoist 
+RUN NODE_OPTIONS-"--max-old-space-size=8192" pnpm install --shamefully-hoist 
 
 # Copy the rest of the application code
 COPY docs docs
