--- a/DockerFile.docs
+++ b/DockerFile.docs
@@ -1,5 +1,5 @@
 # Build stage
-FROM node:latest as build-stage
+FROM node:20 as build-stage
 
 # Set the working directory in the container
 WORKDIR /app
