--- a/DockerFile.docs
+++ b/DockerFile.docs
@@ -1,5 +1,5 @@
 # Build stage
-FROM node:latest as build-stage
+FROM node:20 as build-stage
 
 # Set the working directory in the container
 WORKDIR /app
@@ -11,7 +11,8 @@ COPY package.json pnpm-lock.yaml ./
 RUN npm install -g pnpm
 
 # Install dependencies
-RUN pnpm install --shamefully-hoist 
+# RUN NODE_OPTIONS="--max-old-space-size=8192" pnpm install --shamefully-hoist 
+RUN pnpm install
 
 # Copy the rest of the application code
 COPY docs docs
