--- a/package.json
+++ b/package.json
@@ -71,18 +71,25 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@ai-sdk/anthropic": "^1.2.12",
+		"@ai-sdk/google": "^1.2.22",
+		"@ai-sdk/groq": "^1.2.9",
+		"@ai-sdk/openai": "^1.3.23",
+		"@ai-sdk/xai": "^1.2.18",
 		"@aws-sdk/client-s3": "^3.777.0",
 		"@flystorage/aws-s3": "^1.0.1",
 		"@flystorage/file-storage": "^1.0.1",
 		"@flystorage/local-fs": "^1.0.1",
 		"@melt-ui/svelte": "^0.86.6",
 		"@node-rs/argon2": "^2.0.2",
+		"@openrouter/ai-sdk-provider": "^0.7.3",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"@square/svelte-store": "^1.0.18",
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/vite": "^4.1.1",
+		"ai": "^4.3.19",
 		"akahu": "^2.0.0",
 		"arktype": "^2.1.20",
 		"cronstrue": "^2.57.0",
