--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,8 +12,8 @@
 		}
 	},
 	"scripts": {
-		"build": "tsc",
-		"dev": "tsc --watch",
+		"build": "tsc && tsc-alias",
+		"dev": "tsc --watch & tsc-alias --watch",
 		"clean": "rm -rf dist",
 		"check": "tsc --noEmit",
 		"format": "prettier --write .",
@@ -28,6 +28,7 @@
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
 		"@types/lodash-es": "^4.17.12",
+		"tsc-alias": "^1.8.16",
 		"typescript": "^5.8.3"
 	}
 }
