--- a/packages/context/package.json
+++ b/packages/context/package.json
@@ -11,15 +11,16 @@
     }
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch"
+    "build": "tsc && tsc-alias",
+    "dev": "tsc --watch & tsc-alias --watch"
   },
   "dependencies": {
-    "@totallator/shared": "workspace:*",
-    "@totallator/database": "workspace:*"
+    "@totallator/database": "workspace:*",
+    "@totallator/shared": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.0.0"
   }
 }
