--- a/packages/context/tsconfig.json
+++ b/packages/context/tsconfig.json
@@ -8,7 +8,11 @@
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "lib": ["ES2022", "DOM"],
-    "types": ["node"]
+    "types": ["node"],
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules"],
