--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -15,7 +15,11 @@
 		"declaration": true,
 		"declarationMap": true,
 		"outDir": "./dist",
-		"rootDir": "./src"
+		"rootDir": "./src",
+		"baseUrl": "./",
+		"paths": {
+			"@/*": ["src/*"]
+		}
 	},
 	"include": ["src/**/*"],
 	"exclude": ["dist", "node_modules"],
