--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -19,6 +19,8 @@
 		"lint": "prettier --check .",
 		"db:generate": "drizzle-kit generate --config=\"drizzle.config.ts\"",
 		"db:studio": "drizzle-kit studio --config=\"drizzle.config.ts\"",
+		"db:custom": "drizzle-kit  generate --custom  --config=\"drizzle.config.ts\"",
+		"db:undo": "drizzle-kit drop --config=\"drizzle.config.ts\"",
 		"knip": "knip"
 	},
 	"dependencies": {
