--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,7 +23,8 @@
 		"arktype": "^2.1.20",
 		"lodash-es": "^4.17.21",
 		"prettier": "^3.6.2",
-		"zod": "^4.0.10"
+		"zod": "^4.0.10",
+		"@totallator/context": "workspace:*"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
