--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -21,5 +21,9 @@
 		}
 	},
 	"include": ["src/**/*"],
-	"exclude": ["dist", "node_modules"]
+	"exclude": ["dist", "node_modules"],
+	"references": [
+    {"path": "../context"},
+    {"path": "../database"}
+  ]
 }
