--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -97,6 +97,7 @@
     "@totallator/context": "workspace:*",
     "@totallator/database": "workspace:*",
     "@totallator/shared": "workspace:*",
+    "@types/node": "^24.1.0",
     "ai": "^4.3.19",
     "akahu": "^2.2.0",
     "arktype": "^2.1.20",
