--- a/packages/database/.prettierrc.json
+++ b/packages/database/.prettierrc.json
@@ -1,11 +1,6 @@
 {
 	"plugins": ["@trivago/prettier-plugin-sort-imports"],
-	"importOrder": [
-		"^node:",
-		"<THIRD_PARTY_MODULES>",
-		"^@totallator/(.*)$",
-		"^[./]"
-	],
+	"importOrder": ["^node:", "<THIRD_PARTY_MODULES>", "^@totallator/(.*)$", "^[./]"],
 	"importOrderSeparation": true,
 	"importOrderSortSpecifiers": true,
 	"importOrderCaseInsensitive": true
