--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -22,8 +22,5 @@
 	},
 	"include": ["src/**/*"],
 	"exclude": ["dist", "node_modules"],
-	"references": [
-    {"path": "../context"},
-    {"path": "../database"}
-  ]
+	"references": [{ "path": "../context" }, { "path": "../database" }]
 }
