--- a/packages/context/package.json
+++ b/packages/context/package.json
@@ -13,7 +13,9 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "dev": "tsc --watch & tsc-alias --watch",    
-		"check": "tsc --noEmit"
+		"check": "tsc --noEmit",
+		"circular": "madge --circular --extensions ts src/",
+		"circular:graph": "madge --circular --extensions ts --image circular-deps.svg src/"
   },
   "dependencies": {
     "@totallator/database": "workspace:*",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "madge": "^8.0.0",
     "tsc-alias": "^1.8.16",
     "typescript": "^5.0.0"
   }
