--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -11,6 +11,8 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
+    "circular": "madge --circular --extensions ts,svelte src/",
+    "circular:graph": "madge --circular --extensions ts,svelte --image circular-deps.svg src/",
     "test:integration": "playwright test",
     "test:unit": "TEST_ENV=true vitest",
     "db:generate": "pnpm drizzle-kit generate --config=\"drizzlePostgres.config.ts\"",
@@ -48,6 +50,7 @@
     "eslint-plugin-svelte": "^3.11.0",
     "flowbite": "^3.1.2",
     "flowbite-svelte": "^1.10.21",
+    "madge": "^8.0.0",
     "mermaid": "^11.9.0",
     "papaparse": "^5.5.3",
     "postcss": "^8.5.6",
