--- a/packages/business-logic/package.json
+++ b/packages/business-logic/package.json
@@ -8,6 +8,10 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"default": "./dist/index.js"
+		},
+		"./client": {
+			"types": "./dist/client.d.ts",
+			"default": "./dist/client.js"
 		}
 	},
 	"scripts": {
