--- a/packages/business-logic/tsconfig.json
+++ b/packages/business-logic/tsconfig.json
@@ -24,5 +24,5 @@
 		"tsBuildInfoFile": "./tsconfig.tsbuildinfo"
 	},
 	"include": ["src/**/*"],
-	"exclude": ["dist", "node_modules", "**/*.test.ts"],
+	"exclude": ["dist", "node_modules", "**/*.test.ts"]
 }
