--- a/packages/business-logic/tsconfig.build.json
+++ b/packages/business-logic/tsconfig.build.json
@@ -10,7 +10,10 @@
 		"moduleResolution": "bundler",
 		"allowImportingTsExtensions": false,
 		"preserveWatchOutput": true,
-		"pretty": false
+		"pretty": false,
+		"noEmit": false,
+		"outDir": "./dist",
+		"rootDir": "./src"
 	},
 	"exclude": ["dist", "node_modules", "**/*.test.ts"]
 }
