--- a/packages/business-logic/package.json
+++ b/packages/business-logic/package.json
@@ -17,7 +17,7 @@
 	"scripts": {
 		"build": "tsc --project tsconfig.build.json && tsc-alias -p tsconfig.build.json",
 		"dev": "tsc --watch --project tsconfig.build.json & tsc-alias --watch -p tsconfig.build.json",
-		"clean": "rm -rf dist",
+		"clean": "rm -rf dist tsconfig.build.tsbuildinfo tsconfig.tsbuildinfo",
 		"test": "vitest",
 		"check": "tsc --project tsconfig.json",
 		"circular": "madge --circular --extensions ts src/",
