--- a/packages/context/package.json
+++ b/packages/context/package.json
@@ -14,6 +14,7 @@
     "build": "tsc && tsc-alias",
     "dev": "tsc --watch & tsc-alias --watch",
     "check": "tsc --noEmit",
+    "clean": "rm -rf dist tsconfig.tsbuildinfo",
     "circular": "madge --circular --extensions ts src/",
     "circular:graph": "madge --circular --extensions ts --image circular-deps.svg src/"
   },
