--- a/packages/logDatabase/package.json
+++ b/packages/logDatabase/package.json
@@ -26,7 +26,7 @@
 		"knip": "knip"
 	},
 	"dependencies": {
-		"@libsql/client": "^0.14.0",
+		"better-sqlite3": "^11.8.0",
 		"@totallator/shared": "workspace:*",
 		"devalue": "^5.1.1",
 		"drizzle-orm": "^0.44.3",
@@ -35,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
+		"@types/better-sqlite3": "^7.6.11",
 		"@types/node": "^24.1.0",
 		"drizzle-kit": "^0.31.4",
 		"knip": "^5.62.0",
