--- a/packages/logDatabase/package.json
+++ b/packages/logDatabase/package.json
@@ -26,7 +26,6 @@
 		"knip": "knip"
 	},
 	"dependencies": {
-		"better-sqlite3": "^11.8.0",
 		"@totallator/shared": "workspace:*",
 		"devalue": "^5.1.1",
 		"drizzle-orm": "^0.44.3",
@@ -34,8 +33,8 @@
 		"zod": "^4.0.10"
 	},
 	"devDependencies": {
+		"@libsql/client": "^0.15.12",
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
-		"@types/better-sqlite3": "^7.6.11",
 		"@types/node": "^24.1.0",
 		"drizzle-kit": "^0.31.4",
 		"knip": "^5.62.0",
