--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "circular:context": "pnpm --filter @totallator/context circular"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "^5.8.2"
   }
 }
