--- a/packages/context/package.json
+++ b/packages/context/package.json
@@ -16,7 +16,9 @@
     "check": "tsc --noEmit",
     "clean": "rm -rf dist tsconfig.tsbuildinfo",
     "circular": "madge --circular --extensions ts src/",
-    "circular:graph": "madge --circular --extensions ts --image circular-deps.svg src/"
+    "circular:graph": "madge --circular --extensions ts --image circular-deps.svg src/",
+    "format": "prettier --write .",
+    "lint": "prettier --check ."
   },
   "dependencies": {
     "@totallator/database": "workspace:*",
@@ -27,8 +29,10 @@
   },
   "devDependencies": {
     "@sveltejs/kit": "^2.33.1",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22.0.0",
     "madge": "^8.0.0",
+    "prettier": "^3.6.2",
     "tsc-alias": "^1.8.16",
     "typescript": "^5.0.0"
   }
