--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules
 /build
+**/dist
 
 /package
 /db
@@ -12,7 +13,6 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 .vscode 
-node_modules 
 .git
 .gitattributes 
 .eslintignore
@@ -25,3 +25,12 @@ Dockerfile
 backup
 import
 tests
+
+# TypeScript build info
+*.tsbuildinfo
+**/*.tsbuildinfo
+
+# Package-specific ignores
+**/coverage
+**/temp
+**/.turbo
