Relocated documentation into Monorepo application

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ db.db*
 *.sqlite3*
 docker-compose.yml
 core
-docs/.vitepress/dist
-docs/.vitepress/cache
+apps/docs/.vitepress/dist
+apps/docs/.vitepress/cache
 .pnpm-store
 *.tsbuildinfo
