--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
 		"format:webapp": "pnpm --filter @totallator/webapp format",
 		"db:generate": "pnpm --filter @totallator/database db:generate",
 		"db:studio": "pnpm --filter @totallator/database db:studio",
-		"docs:dev": "pnpm --filter @totallator/webapp docs:dev",
-		"docs:build": "pnpm --filter @totallator/webapp docs:build",
-		"docs:preview": "pnpm --filter @totallator/webapp docs:preview",
+		"docs:dev": "pnpm --filter @totallator/docs dev",
+		"docs:build": "pnpm --filter @totallator/docs build",
+		"docs:preview": "pnpm --filter @totallator/docs preview",
 		"circular": "pnpm --recursive circular",
 		"circular:business-logic": "pnpm --filter @totallator/business-logic circular",
 		"circular:webapp": "pnpm --filter @totallator/webapp circular",
