--- a/.github/workflows/dockerBuildDocs.yaml
+++ b/.github/workflows/dockerBuildDocs.yaml
@@ -45,8 +45,8 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: DockerFile.docs
+          context: ./apps/docs
+          file: ./apps/docs/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
