--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -2,6 +2,9 @@
 	"name": "@totallator/webapp",
 	"version": "0.0.1",
 	"private": true,
+	"files": [
+		"build"
+	],
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
