--- a/.github/workflows/githubDocs.yaml
+++ b/.github/workflows/githubDocs.yaml
@@ -52,7 +52,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/.vitepress/dist
+          path: apps/docs/.vitepress/dist
 
   # Deployment job
   deploy:
